<resources>
    <string name="app_name">Training Stat</string>
    <string name="confirm_button_text">CONFIRM</string>
    <string name="insert_name_placeholder">e.g. John Smith</string>
    <string name="insert_username_message">Please insert your username</string>
    <string name="text_view_last_sessions">Last Sessions</string>
    <string name="new_collective_session_button_text">NEW COLLECTIVE SESSION</string>
    <string name="new_individual_session_button_text">NEW INDIVIDUAL SESSION</string>
    <string name="join_session_button_text">JOIN SESSION</string>
    <string name="start_button_text">START</string>
    <string name="stop_button_text">STOP</string>
    <string name="pause_button_text">PAUSE</string>
    <string name="monitoring">Monitoring</string>
    <string name="ready">Ready</string>
    <string name="paused">Paused</string>
    <string name="terminated">Terminated</string>
    <string name="insert_session_id_placeholder">Session_ID</string>
    <string name="status_text_view_default">Ready</string>
    <string name="step_sensor_unavailable_toast">Step sensor not available</string>
    <string name="activity_status_still">still</string>
    <string name="activity_status_walking">walking</string>
    <string name="activity_status_running">running</string>
    <string name="activity_status_unknown">unknown</string>
    <string name="trainer_user_tv">Players</string>
    <string name="trainer_stopped_button">Session concluded</string>
    <string name="label_user">User</string>
    <string name="label_session_id">Session id</string>
    <string name="label_statistics">Statistics</string>
    <string name="label_total_activity">Total activity time</string>
    <string name="label_start_time">Start time</string>
    <string name="label_end_time">End time</string>
    <string name="label_total_steps">Total steps</string>
    <string name="label_percentage_still">Still percentage</string>
    <string name="label_percentage_walking">Walking percentage</string>
    <string name="label_percentage_running">Running percentage</string>
    <string name="label_percentage_unknown">Unknown activity</string>
</resources>