<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.SessionActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/sessionUsernameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sessionSessionIdTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sessionStatusTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:text="@string/ready"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sessionStatusActivityTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:text="@string/activity_status_unknown"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/sessionStepCounterTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="34sp" />

            <Chronometer
                android:id="@+id/sessionChronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="30sp" />

            <Button
                android:id="@+id/sessionStartButton"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:onClick="startPauseButtonClicked"
                android:text="@string/start_button_text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/sessionStopButton"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:onClick="stopButtonClicked"
                android:text="@string/stop_button_text"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>