<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.MenuActivity">

    <TextView
        android:id="@+id/menuUsernameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menuNewCollectiveButton"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:onClick="newCollectiveSessionButtonClicked"
        android:text="@string/new_collective_session_button_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuUsernameTV" />

    <Button
        android:id="@+id/menuNewIndividualButton"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:onClick="newIndividualSessionButtonClicked"
        android:text="@string/new_individual_session_button_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuNewCollectiveButton" />

    <Button
        android:id="@+id/menuJoinCollectiveButton"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:onClick="joinCollectiveSessionButtonClicked"
        android:text="@string/join_collective_session_button_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuNewIndividualButton" />

    <EditText
        android:id="@+id/menuInsertSessionIdET"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/insert_session_id_placeholder"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuJoinCollectiveButton" />

    <TextView
        android:id="@+id/menuLastSessionsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_view_last_sessions"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuInsertSessionIdET" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuLastSessionsTV">

        <LinearLayout
            android:id="@+id/pastSessionsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>