<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.ResultActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_username_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_user"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="24sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_session_id_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_session_id"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_session_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="24sp" />

            </TableRow>

            <ca.hss.heatmaplib.HeatMap
                android:id="@+id/heatmap"
                android:layout_width="400dp"
                android:layout_height="230dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/soccer_field"
                app:maxOpacity="255"
                app:minOpacity="0"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tv_statistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_statistics"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="24sp"
                android:layout_marginTop="10dp"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_start_time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@string/label_start_time'
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_end_time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@string/label_end_time'
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_total_activity_time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@string/label_total_activity'
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp" />

                <Chronometer
                    android:id="@+id/chrono_totalactivity_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_total_steps_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@string/label_total_steps'
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_total_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_percentage_still_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@string/label_percentage_still'
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_percentage_still"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_percentage_walking_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@string/label_percentage_walking'
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_percentage_walking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_percentage_running_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@string/label_percentage_running'
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_percentage_running"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_percentage_unknown_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@string/label_percentage_unknown'
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_percentage_unknown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />
            </TableRow>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>